components/homepage/homepage-service-secure.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
  annotations:
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app.kubernetes.io/name: homepage
