components/homepage/homepage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 6443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: homepage
