components/homepage/homepage-ingress-cert-manager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Dynamically Detected Homepage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
  name: homepage
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
spec:
  rules:
    - host: "homepage.apps.lab.etbit.io"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - homepage.apps.lab.etbit.io
    secretName: openshift-wildcard-certificate # < cert-manager will store the created certificate in this secret.
