components/homepage/homepage-ingress-secure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    gethomepage.dev/description: "Dynamically Detected Homepage"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Cluster Management"
    gethomepage.dev/icon: "homepage.png"
    gethomepage.dev/name: "Homepage"
    route.openshift.io/termination: "reencrypt"
spec:
  rules:
    - host: "homepage.apps.infra.etbit.io"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: homepage
              port:
                number: 443
  tls:
    - hosts:
        - "homepage.apps.infra.etbit.io"
      secretName: "openshift-wildcard"
