components/homepage/homepage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    gethomepage.dev/description: Dynamically Detected Homepage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
    route.openshift.io/termination: "reencrypt"
spec:
  rules:
    - host: "homepage.apps.lab.etbit.io"
      http:
        paths:
        - backend:
            service:
              name: homepage
              port:
                number: 443
          path: /
          pathType: Prefix
     # http:
     #   paths:
     #     - path: "/"
     #       pathType: Prefix
     #       backend:
     #         service:
     #          name: homepage
     #           port:
     #             number: 3000
 tls:
   - hosts:
     - homepage.apps.lab.etbit.io
     secretName: openshift-wildcard
